Chapter 2 first correction Finished

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -167,5 +167,39 @@
   publisher={Springer Science \& Business Media}
 }
 
-  
+
+%Survey on algorithms for experimental design  
+@article{viana2010algorithm,
+  title={An algorithm for fast optimal Latin hypercube design of experiments},
+  author={Viana, Felipe AC and Venter, Gerhard and Balabanov, Vladimir},
+  journal={International journal for numerical methods in engineering},
+  volume={82},
+  number={2},
+  pages={135--156},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+
+
+%Paper by Sobol in Sobol indices.
+@article{sobol1993sensitivity,
+  title={Sensitivity estimates for nonlinear mathematical models},
+  author={Sobol, Ilya M},
+  journal={Mathematical Modelling and Computational Experiments},
+  volume={1},
+  number={4},
+  pages={407--414},
+  year={1993}
+}
+
+
+
+%Best reference in measure theory
+@book{lerner2014course,
+  title={A Course on Integration Theory},
+  author={Lerner, Nicolas and others},
+  year={2014},
+  publisher={Springer}
+}
 
