Prior to the last correction of chapter two, 2 days before going to Calgary

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -47,7 +47,7 @@
   publisher="Wiley New York"
 }
 
-%Book on gaussian processes in machine learning
+%Book on gaussian processes in machine  learning
 @article{rasmussen2006gaussian,
   title={Gaussian processes for machine learning},
   author={Rasmussen, Carl Edward},
@@ -201,5 +201,12 @@
   author={Lerner, Nicolas and others},
   year={2014},
   publisher={Springer}
+}
+
+@book{murphy2012machine,
+  title={Machine learning: a probabilistic perspective},
+  author={Murphy, Kevin P},
+  year={2012},
+  publisher={MIT press}
 }
 
